--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.3",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.17",
@@ -23,6 +24,7 @@
     "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
