--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-modal": "^3.16.1",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
