restart process pm2 0

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,3 +26,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - name: Change directory
+      run: cd /home/telintec_server/actions-runner/_work/telintec_webapp/telintec_webapp
+    - run: pm2 restart 0
