--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@heroicons/react": "^2.1.3",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.17.2",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "lodash.debounce": "^4.0.8",
@@ -25,6 +29,7 @@
     "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
